# xd-rt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: AABB.h  BRDF.h  Camera.h  CameraFactory.h  CoreTypes.h  Distribution.h  EmbreeGeomManager.h  EmbreeUtil.h  Enums.h  Film.h  HitAccel.h  HitRecord.h  HitSolver.h  Hitable.h  Light.h  Material.h  MathType.h  MathUtil.h  MeshLoader.h  Model.h  Plane.h  Primitive.h  Ray.h  Texture.h  TextureFactory.h  TinyGLTFUtil.h  Triangle.h
include/Loader/: GLTFMaterialLoader.h
sample/: CMakeLists.txt
sample/appBase/: CMakeLists.txt  VulkanGLFWAppBase.cpp  VulkanGLFWAppBase.h
sample/basicCompute/: BasicComputeApp.cpp  BasicComputeApp.h  CMakeLists.txt
sample/basicCompute/shader/: test.comp
sample/basicFramegraph/: BasicFramegraphApp.cpp  BasicFramegraphApp.h  CMakeLists.txt
sample/basicGraphic/: BasicGraphicApp.cpp  BasicGraphicApp.h  CMakeLists.txt
sample/basicMultipass/: BasicMultipassApp.cpp  BasicMultipassApp.h  CMakeLists.txt
sample/imguiAppBase/: CMakeLists.txt  ImguiAppBase.cpp  ImguiAppBase.h
sample/tonemapping/: CMakeLists.txt  TonemappingApp.cpp  TonemappingApp.h
src/: AABB.cpp  BVHNode.cpp  Box.cpp  CameraFactory.cpp  ConcurrencyUtil.h  ConcurrentUtil.h  CosineHemisphere.cpp  DomeLight.cpp  EmbreeGeomManager.cpp  EmbreeHitAccel.cpp  Film.cpp  GLTFMaterialLoader.cpp  GLTFMeshLoader.cpp  GLTFSceneLoader.cpp  HitSolver.cpp  Lambertian.cpp  MathUtil.h  MatteMaterial.cpp  NoAccel.cpp  ObjLoader.cpp  ObjMeshLoader.cpp  PieceWise1D.cpp  Plane.cpp  PointLight.cpp  Primitive.cpp  SimpleSampler.cpp  SpecularReflection.cpp  Sphere.cpp  TextureFactory.cpp  TinyGLTFWrapper.cpp  Triangle.cpp  UniformHemisphere.cpp
src/app/: CMakeLists.txt  CameraHandler.cpp  CameraHandler.h
src/app/vulkan/: GLFWGlobal.h  GLFWInclude.h  Types.h  VulkanGLFWApp.cpp  VulkanGLFWApp.h
src/app/vulkan/shader/: test.frag  test.vert
src/brdf/: Lambertian.cpp
src/bxdf/: BxDFTypes.h  Fresnel.h  Lambertian.cpp  Lambertian.h  PerfectReflection.cpp  PerfectReflection.h  PerfectTransmission.cpp  PerfectTransmission.h
src/camera/: Camera.cpp  CameraFactory.cpp  CameraFactory.h  CameraTypes.h  OrthoCamera.cpp  OrthoCamera.h  PerspCamera.cpp  PerspCamera.h
src/core/: AABB.cpp  AABB.h  BxDF.h  Camera.h  Contexts.h  CoreTypes.h  Distribution.h  Enums.h  Film.cpp  Film.h  Filter.h  FloatWithError.h  HitAccel.h  HitRecord.cpp  HitRecord.h  HitSolver.h  Hitable.h  Image.cpp  Image.h  Integrator.h  Light.h  LightSampler.cpp  LightSampler.h  Mapping.h  Material.cpp  Material.h  MathType.h  MathTypes.h  Model.cpp  Model.h  Primitive.cpp  Primitive.h  Ray.cpp  Ray.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h  (+2 more)
src/distribution/: CosineHemisphere.cpp  CosineHemisphere.h  DiscreteUniformDistribution.h  DistributionTypes.h  InverseMethodDistribution.h  PieceWise1D.cpp  PieceWise1D.h  PieceWise2D.cpp  PieceWise2D.h  UniformDistribution.h  UniformHemisphere.cpp  UniformHemisphere.h
src/filter/: FilterTypes.h  ImageFilter2D.h  NearestFilter.cpp  NearestFilter.h  TentFilter.cpp  TentFilter.h
src/hitAccel/: AABB.cpp  BVHNode.cpp  BVHNode.h  EmbreeHitAccel.cpp  EmbreeHitAccel.h  HitAccelTypes.h  NoAccel.cpp  NoAccel.h
src/hitSolver/: BVHHitSolver.cpp  BVHHitSolver.h  EmbreeHitSolver.cpp  EmbreeHitSolver.h  HitSolver.cpp  HitSolverTypes.h  NaiveHitSolver.cpp  NaiveHitSolver.h
src/integrator/: DebugIntegrator.cpp  DebugIntegrator.h  DirectIntegrator.cpp  DirectIntegrator.h  Integrator.cpp  IntegratorTypes.h  PathIntegrator.cpp  PathIntegrator.h  SamplerIntegrator.cpp  SamplerIntegrator.h
src/light/: DomeLight.cpp  DomeLight.h  LightTypes.h  PointLight.cpp  PointLight.h
src/loader/: GLTFMaterialLoader.cpp  GLTFMeshLoader.cpp  GLTFMeshLoader.h  GLTFSceneLoader.cpp  GLTFSceneLoader.h  MaterialLoader.h  MeshLoader.h  ObjMeshLoader.cpp  ObjMeshLoader.h  SceneLoader.h  TextureFactory.cpp  TextureFactory.h
src/mapping/: EquirectangularMapping.cpp  EquirectangularMapping.h  MappingTypes.h  UVMapping.cpp  UVMapping.h
src/material/: MaterialTypes.h  MatteMaterial.cpp  MatteMaterial.h  PerfectFresnelMaterial.cpp  PerfectFresnelMaterial.h  PerfectReflectionMaterial.cpp  PerfectReflectionMaterial.h  (+3 more)
src/realtime/: CMakeLists.txt
src/realtime/backend/vulkan/: DeferredRenderer.cpp  DeferredRenderer.h  FrameGraph.cpp  FrameGraph.h  LightManager.cpp  MaterialFactoryVk.cpp  MaterialFactoryVk.h  MaterialInstanceVk.cpp  MaterialInstanceVk.h  ModelFactoryVk.cpp  ModelFactoryVk.h  SamplerCache.cpp  SamplerCache.h  TextureFactoryVk.cpp  TextureVk.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandQueue.h  VulkanComputePipeline.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanFrameBuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanMacros.h  VulkanPipelineBase.cpp  VulkanPipelineBase.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanPlatformSpecific.h  VulkanQueue.h  VulkanRenderPass.h  VulkanSemaphore.cpp  VulkanSemaphore.h  VulkanShader.cpp  VulkanSubpass.cpp  (+5 more)
src/realtime/backend/vulkan/shader/: LambertianFragmentShader.cpp  LambertianFragmentShader.h  ShaderBase.cpp  ShaderBase.h  ShaderTraits.h  gbuffer.frag  gbuffer.vert  lambertian.frag  lightPass.frag  lightPass.vert  tonemapping.comp
test/: AABBTest.cpp  BVHTest.cpp  BxDFTest.cpp  CMakeLists.txt  CameraTest.cpp  DistributionTest.cpp  DomeTest.cpp  FilmTest.cpp  FilterTest.cpp  FloatWithErrorTest.cpp  GLTFLoaderTest.cpp  HitAccelTest.cpp  HitRecordTest.cpp  HitSolverTest.cpp  ImageTest.cpp  ImguiIntegrationTest.cpp  IntegratorTest.cpp  LightTest.cpp  Macros.h  MappingTest.cpp  MaterialTest.cpp  MathUtilTest.cpp  ModelHitTest.cpp  ObjLoaderTest.cpp  PrimitiveTest.cpp  SamplerTest.cpp  TestScenes.h  TextureTest.cpp  TriangleTest.cpp  TriangulateTest.cpp  VisibilityTest.cpp  VulkanTest.cpp
tutorial/: CMakeLists.txt
tutorial/appBase/: CMakeLists.txt  GLFWInclude.h  VulkanGLFWAppBase.cpp  VulkanGLFWAppBase.h
(+93 files in other folders)
